# test-py-package

./: .gitignore  README.md  pyproject.toml  setup.cfg
