[tool.poetry]
name = "test-py-package"
version = "0.1.0"
description = ""
authors = ["vvveracruz <vegomez@monzo.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = [
    "poetry-core>=1.0.0", 
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
